# DataForge

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  app_gemini.py  chatbot.py  chatbot_v1.py  config.py  langgraph.json  main.py  my_cn_data.db  my_cn_data_optimized.db  pyproject.toml  requirements-bref.txt  requirements.txt
.chainlit/: .langchain.db  config.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent/: agents.py  debug.py  example.py  gen_faker_data_agent.py  graph.py  intent_agent.py  llm.py  mapping_agent.py  mock_data.py  nodes.py  prompt.py  prompt_demo.py  state.py  tempCodeRunnerFile.py  utils.py
agent/field_map_fill_agent/: mapping_agent.py  mock_data.py  prompt.py  state.py
agent/input_analyze_agent/: __init__.py  intent_agent.py  state.py
agent_v1/: debug.py  gen_faker_data_agent.py  graph.py  intent_agent.py  llm.py  mapping_agent.py  mock_data.py  state.py  utils.py
agent_v2/: state.py
chatbot_app/: __init__.py
cruds/: __init__.py  table_example.py  table_metadata.py
data/metadata/: ods_hotel.json  product.json  user.json
data/output/: data.json  user_data.csv
database_models/: __init__.py  models.py  schema.py  sys_enum.py
design/: DataForge-v1.mmd  DataForge-v2.mmd  GRAPH.mmd  design.md
explore/demo_sql_parse/: adv_sql_parser.py  sql_parser.py  sqlglot_demo.py  sqlglot_demo_parse_meta.py  sqlglot_demo_table_where.py  tempCodeRunnerFile.py
fake_agent_by_ai/: LangGraph 数据生成 JSON_.md  data_generator.py
faker_utils/: dg_configs.py  fake_demo.py  faker_cn_area.py  faker_cn_idcard.py  faker_datasets.py
mcp_demo/: client.py
prompts/: demo1.md  demo2.md  prompt.md
public/: theme.json
utils/: db.py  log.py
web_demo/: app.py
web_demo/elements/: dataframe.py
